--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "inspector": "mcp-inspector --config mcp.json --server @cyanheads/filesystem-mcp-server"
   },
   "dependencies": {
-    "@google/genai": "^1.0.1",
     "@modelcontextprotocol/sdk": "^1.12.0",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.21",
@@ -46,7 +45,7 @@
     "tiktoken": "^1.0.21",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
-    "validator": "13.15.0",
+    "validator": "^13.15.23",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
     "yargs": "^17.7.2",
